<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ma_til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/red500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/ma_et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ma_et_name"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ma_til_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/red500"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_til_name">

        <EditText
            android:id="@+id/ma_et_age"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/ma_et_age"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/ma_tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ma_tv_gender"
        android:textColor="@color/red500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_til_age" />

    <RadioGroup
        android:id="@+id/ma_rg_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_tv_gender">

        <RadioButton
            android:id="@+id/ma_rd_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ma_rd_male" />

        <RadioButton
            android:id="@+id/ma_rd_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ma_rd_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/ma_tv_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ma_tv_preferences"
        android:textColor="@color/red500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_rg_gender" />

    <CheckBox
        android:id="@+id/ma_ch_donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ma_ch_donut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_tv_preferences" />

    <CheckBox
        android:id="@+id/ma_ch_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ma_ch_pizza"
        app:layout_constraintBottom_toBottomOf="@+id/ma_ch_donut"
        app:layout_constraintStart_toEndOf="@+id/ma_ch_donut"
        app:layout_constraintTop_toTopOf="@+id/ma_ch_donut"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/ma_ch_cake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ma_ch_cake"
        app:layout_constraintBottom_toBottomOf="@+id/ma_ch_pizza"
        app:layout_constraintStart_toEndOf="@+id/ma_ch_pizza"
        app:layout_constraintTop_toTopOf="@+id/ma_ch_pizza"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/ma_ch_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:text="@string/ma_ch_toast"
        app:layout_constraintBottom_toBottomOf="@+id/ma_ch_cake"
        app:layout_constraintStart_toEndOf="@+id/ma_ch_cake"
        app:layout_constraintTop_toTopOf="@+id/ma_ch_cake"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ma_bt_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ma_bt_ok"
        style="@style/bt_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ma_ch_donut" />
</android.support.constraint.ConstraintLayout>